# ComiRec

./: .gitignore  README.md  analysis.py  prepare.py  program.md  pyproject.toml  train.py
comirec/: __init__.py  configs.py  data.py  eval.py  model.py  prepare.py  train.py  util.py
tests/: conftest.py  test_data.py  test_model.py  test_prepare.py  test_train_eval.py
