[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "comirec"
version = "0.1.0"
description = "Learning-oriented PyTorch ComiRec-SA project"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "torch==2.10.*",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

[project.scripts]
comirec-prepare = "comirec.prepare:main"
comirec-train = "comirec.train:main"
comirec-eval = "comirec.eval:main"

[tool.setuptools]
packages = ["comirec"]

[tool.pytest.ini_options]
testpaths = ["tests"]
